--- a/Project_CS511/Project_CS511.csproj
+++ b/Project_CS511/Project_CS511.csproj
@@ -394,6 +394,12 @@
     <Compile Include="Component\SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\yourStore\yourStoreBlock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\yourStore\yourStoreBlock.Designer.cs">
+      <DependentUpon>yourStoreBlock.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataSource.cs" />
     <Compile Include="main.cs">
       <SubType>Form</SubType>
@@ -487,6 +493,12 @@
     <Compile Include="SubPage\updateInfo.Designer.cs">
       <DependentUpon>updateInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="SubPage\yourStore.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SubPage\yourStore.Designer.cs">
+      <DependentUpon>yourStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="testDatabase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -565,6 +577,9 @@
     <EmbeddedResource Include="Component\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Component\yourStore\yourStoreBlock.resx">
+      <DependentUpon>yourStoreBlock.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SubPage\cartSubPage.resx">
       <DependentUpon>cartSubPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -591,6 +606,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SubPage\updateInfo.resx">
       <DependentUpon>updateInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubPage\yourStore.resx">
+      <DependentUpon>yourStore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="testDatabase.resx">
       <DependentUpon>testDatabase.cs</DependentUpon>
