--- a/Project_CS511/packages.config
+++ b/Project_CS511/packages.config
@@ -4,7 +4,7 @@
   <package id="AWSSDK.SecurityToken" version="3.7.100.14" targetFramework="net472" />
   <package id="DnsClient" version="1.6.1" targetFramework="net472" />
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
@@ -15,6 +15,7 @@
   <package id="MongoDB.Libmongocrypt" version="1.8.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="RestSharp" version="110.2.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net472" />
   <package id="Snappier" version="1.0.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -46,7 +47,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -61,11 +62,14 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.7.3" targetFramework="net472" />
