new user now must add their address when create account

--- a/Project_CS511/packages.config
+++ b/Project_CS511/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="AWSSDK.Core" version="3.7.100.14" targetFramework="net472" />
   <package id="AWSSDK.SecurityToken" version="3.7.100.14" targetFramework="net472" />
+  <package id="cef.redist.x64" version="120.1.10" targetFramework="net472" />
+  <package id="cef.redist.x86" version="120.1.10" targetFramework="net472" />
+  <package id="CefSharp.Common" version="120.1.110" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="120.1.110" targetFramework="net472" />
   <package id="DnsClient" version="1.6.1" targetFramework="net472" />
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
